[package]
name = "scrapeq"
version = "0.1.0"
authors = ["Michael Angerman <stormasm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1"
reqwest = { version = "0.10", features = ["blocking"] }
scraper = "0.12"
